# incognidium

./: .env  .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  comprehensive_test.html  debug_layout.patch  sites.txt  test_appearance.html  test_backdrop.html  test_color_mix.html  test_css_variables.html  test_current.html  test_debug.rs  test_decode.rs  test_features.html  test_field_sizing.html  test_form_controls.html  test_gradient.html  test_grid.html  test_has_selector.html  test_image_set.html  test_keyframes.html  test_list_style_image.html  test_marker.html  test_marker_spacing.html  test_media_queries.html  test_noscript.html  test_outline.html  test_outline_styles.html  test_overflow_check.rs  test_overflow_simple.html  test_quick.html  test_recent_features.html  test_resize.html  test_safety_caps.html  test_selection.html  test_session_summary.html  test_shadow_dom.html  (+8 more)
.claude/projects/-home-caug-incognidium/memory/: animation_range_implemented.md  font_variation_settings_implemented.md  offset_anchor_position_implemented.md  orphans_widows_implemented.md
.github/workflows/: ci.yml  release.yml
assets/: incognidium.desktop
crates/incognidium-css/: Cargo.toml
crates/incognidium-css/src/: lib.rs
crates/incognidium-devtools/: Cargo.toml
crates/incognidium-devtools/src/: lib.rs
crates/incognidium-dom/: Cargo.toml
crates/incognidium-dom/src/: lib.rs
crates/incognidium-html/: Cargo.toml
crates/incognidium-html/src/: lib.rs
crates/incognidium-layout/: Cargo.toml
crates/incognidium-layout/src/: lib.rs  lib.rs.bak
crates/incognidium-net/: Cargo.toml
crates/incognidium-net/src/: lib.rs
crates/incognidium-paint/: Cargo.toml
crates/incognidium-paint/src/: lib.rs
crates/incognidium-shell/: Cargo.toml
crates/incognidium-shell/src/: boa_dom.rs  lib.rs  main.rs  v8_dom.rs
crates/incognidium-style/: Cargo.toml
crates/incognidium-style/src/: lib.rs
crates/murkiu-bindings/: Cargo.toml
crates/murkiu-bindings/src/: lib.rs
crates/murkiu-bytecode/: Cargo.toml
crates/murkiu-bytecode/src/: lib.rs
crates/murkiu-lexer/: Cargo.toml
crates/murkiu-lexer/src/: lib.rs
crates/murkiu-parser/: Cargo.toml
crates/murkiu-parser/src/: lib.rs
crates/murkiu-vm/: Cargo.toml
crates/murkiu-vm/src/: lib.rs
npc_team/: css_engineer.npc  layout_engineer.npc  renderer.npc  team.ctx
npc_team/jinxes/: agent.jinx  cargo_check.jinx  incognidium_build.jinx  incognidium_compare.jinx  incognidium_fix.jinx  incognidium_qa.jinx  list_files.jinx  render_batch.jinx  render_compare.jinx  sh.jinx  sites_geo.json  stop.jinx  view_image.jinx
npc_team/jinxes/incognidium/: incognidium_qa.jinx  sync_nightly.jinx
scripts/: batch_test.py  continuous_qa.jinx  hourly_analysis.sh  vision_backfill.py
tests/: test_all_features.html  test_color_scheme.html  test_comprehensive_modern.html  test_cq_units.html  test_details_content.html  test_font_variant_emoji.html  test_hyphens.html  test_latest_features.html  test_line_height_step.html  test_modern_features.html  test_placeholder.html  test_sites.sh  test_vision.jinx
tests/fixtures/: demo.html  test.html
