[workspace]
members = [
    "crates/incognidium-dom",
    "crates/incognidium-html",
    "crates/incognidium-css",
    "crates/incognidium-style",
    "crates/incognidium-layout",
    "crates/incognidium-paint",
    "crates/incognidium-net",
    "crates/incognidium-shell",
    "crates/murkiu-lexer",
    "crates/murkiu-parser",
    "crates/murkiu-bytecode",
    "crates/murkiu-vm",
    "crates/murkiu-bindings",
    "crates/incognidium-devtools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
incognidium-dom = { path = "crates/incognidium-dom" }
incognidium-html = { path = "crates/incognidium-html" }
incognidium-css = { path = "crates/incognidium-css" }
incognidium-style = { path = "crates/incognidium-style" }
incognidium-layout = { path = "crates/incognidium-layout" }
incognidium-paint = { path = "crates/incognidium-paint" }
incognidium-net = { path = "crates/incognidium-net" }
murkiu-lexer = { path = "crates/murkiu-lexer" }
murkiu-parser = { path = "crates/murkiu-parser" }
murkiu-bytecode = { path = "crates/murkiu-bytecode" }
murkiu-vm = { path = "crates/murkiu-vm" }
murkiu-bindings = { path = "crates/murkiu-bindings" }
incognidium-devtools = { path = "crates/incognidium-devtools" }

# HTML/CSS parsing
html5ever = "0.29"
markup5ever = "0.14"
cssparser = "0.34"

# Layout
taffy = "0.7"

# Fonts
ab_glyph = "0.2"

# Rendering
tiny-skia = "0.11"
resvg = "0.44"
usvg = "0.44"
softbuffer = "0.4"
winit = "0.30"
image = "0.25"

# Networking
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# JavaScript engines (pick via feature flags in incognidium-shell)
v8 = "0.106"
boa_engine = "0.20"
boa_gc = "0.20"

# Utilities
string_cache = "0.8"
log = "0.4"
env_logger = "0.11"
