[package]
name = "incognidium-devtools"
version.workspace = true
edition.workspace = true

[dependencies]
incognidium-dom = { workspace = true }
incognidium-layout = { workspace = true }
incognidium-style = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
