[package]
name = "incognidium-paint"
version.workspace = true
edition.workspace = true

[dependencies]
incognidium-dom = { workspace = true }
incognidium-css = { workspace = true }
incognidium-style = { workspace = true }
incognidium-layout = { workspace = true }
tiny-skia = { workspace = true }
log = { workspace = true }
