[package]
name = "incognidium-shell"
version.workspace = true
edition.workspace = true

[dependencies]
incognidium-dom = { workspace = true }
incognidium-html = { workspace = true }
incognidium-css = { workspace = true }
incognidium-style = { workspace = true }
incognidium-layout = { workspace = true }
incognidium-paint = { workspace = true }
incognidium-net = { workspace = true }
murkiu-vm = { workspace = true }
murkiu-bindings = { workspace = true }
boa_engine = { workspace = true }
boa_gc = { workspace = true }
winit = { workspace = true }
softbuffer = { workspace = true }
tiny-skia = { workspace = true }
image = { workspace = true }
url = { workspace = true }
incognidium-devtools = { workspace = true }
ab_glyph = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
