[package]
name = "incognidium-shell"
version.workspace = true
edition.workspace = true
description = "A lightweight web browser built from scratch in Rust"
authors = ["NPC Worldwide"]
homepage = "https://github.com/npcww/incognidium"
repository = "https://github.com/npcww/incognidium"

[[bin]]
name = "incognidium"
path = "src/main.rs"

[[bin]]
name = "render_to_png"
path = "src/bin/render_to_png.rs"

[[bin]]
name = "incognidium-crawl"
path = "src/bin/crawl.rs"

[package.metadata.deb]
name = "incognidium"
maintainer = "NPC Worldwide"
depends = "$auto"
section = "web"
priority = "optional"
assets = [
    ["target/release/incognidium", "usr/bin/", "755"],
    ["target/release/render_to_png", "usr/bin/incognidium-render", "755"],
    ["target/release/incognidium-crawl", "usr/bin/", "755"],
    ["../../assets/incognidium.desktop", "usr/share/applications/", "644"],
]

[dependencies]
incognidium-dom = { workspace = true }
incognidium-html = { workspace = true }
incognidium-css = { workspace = true }
incognidium-style = { workspace = true }
incognidium-layout = { workspace = true }
incognidium-paint = { workspace = true }
incognidium-net = { workspace = true }
murkiu-vm = { workspace = true }
murkiu-bindings = { workspace = true }
boa_engine = { workspace = true }
boa_gc = { workspace = true }
winit = { workspace = true }
softbuffer = { workspace = true }
tiny-skia = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
image = { workspace = true }
url = { workspace = true }
incognidium-devtools = { workspace = true }
ab_glyph = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
