[package]
name = "incognidium-shell"
version.workspace = true
edition.workspace = true
description = "A lightweight web browser built from scratch in Rust"
authors = ["NPC Worldwide"]
homepage = "https://github.com/npcww/incognidium"
repository = "https://github.com/npcww/incognidium"

[features]
default = ["v8-engine"]
# Use V8 JavaScript engine (fast, can run real framework bundles)
v8-engine = ["dep:v8"]
# Use Boa JavaScript engine (pure Rust, no Google code — slower, limited bundle support)
boa-engine = ["dep:boa_engine", "dep:boa_gc"]

[[bin]]
name = "incognidium"
path = "src/main.rs"

[[bin]]
name = "render_to_png"
path = "src/bin/render_to_png.rs"

[[bin]]
name = "incognidium-crawl"
path = "src/bin/crawl.rs"

[package.metadata.deb]
name = "incognidium"
maintainer = "NPC Worldwide"
depends = "$auto"
section = "web"
priority = "optional"
assets = [
    ["target/release/incognidium", "usr/bin/", "755"],
    ["target/release/render_to_png", "usr/bin/incognidium-render", "755"],
    ["target/release/incognidium-crawl", "usr/bin/", "755"],
    ["../../assets/incognidium.desktop", "usr/share/applications/", "644"],
]

[dependencies]
incognidium-dom = { workspace = true }
incognidium-html = { workspace = true }
incognidium-css = { workspace = true }
incognidium-style = { workspace = true }
incognidium-layout = { workspace = true }
incognidium-paint = { workspace = true }
incognidium-net = { workspace = true }
murkiu-vm = { workspace = true }
murkiu-bindings = { workspace = true }
v8 = { workspace = true, optional = true }
boa_engine = { workspace = true, optional = true }
boa_gc = { workspace = true, optional = true }
winit = { workspace = true }
softbuffer = { workspace = true }
tiny-skia = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
image = { workspace = true }
url = { workspace = true }
incognidium-devtools = { workspace = true }
ab_glyph = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
